MET-6259 clean up and fix contentTier calculation in quality annotation hasTarget (#130)
* MET-6259 clean up and fix contentTier calculation in quality annotation hasTarget

* MET-6259 correct tier cleanup

* MET-6259 add .toList